# dir-nuke

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
scripts/: build-linux.sh  install-dir-nuke.sh  mock-dirs.sh  package.sh
src/: cli.rs  main.rs
